# learning-python

./: pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pylint.yml
src/aulas/: a1.py
src/exercises/: a1.py
