[project]
name = "learning-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gutto", email = "guttolaudie@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = []

[tool.taskipy.tasks]
format = """
ruff chec --select I --fix .
ruff format .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.8",
    "taskipy>=1.13.0",
    "ignr>=2.2",
]
